<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <groupId>com.atlassian.pom</groupId>
        <artifactId>atlassian-public-pom</artifactId>
        <version>29.14</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.atlassian.confluence.plugins</groupId>
    <artifactId>confluence-jira-plugin-parent</artifactId>
    <version>5.1-SNAPSHOT</version>

    <organization>
        <name>Atlassian</name>
        <url>http://www.atlassian.com/</url>
    </organization>
    <modules>
        <module>confluence-jira-plugin</module>
        <!--<module>confluence-jira-plugin-pageobjects</module>-->
    </modules>

    <name>Confluence JIRA Plugin Parent</name>
    <description>This is the JIRA Issue Macro and Services Plugin for Atlassian Confluence.</description>
    <packaging>pom</packaging>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <!--DON'T PUT DEPENDENCIES IN HERE, UNLESS BOTH MODULES NEED IT.-->
    <!--Put them in the modules' poms.-->

    <scm>
        <connection>scm:git:ssh://git@bitbucket.org/atlassian/confluence-jira-plugin.git</connection>
        <developerConnection>scm:git:ssh://git@bitbucket.org/atlassian/confluence-jira-plugin.git</developerConnection>
        <url>https://bitbucket.org/atlassian/confluence-jira-plugin</url>
    </scm>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.2.2</version>
                <configuration>
                    <!-- When using atlassian-public-pom as parent POM we need this configuration to skip tests, -->
                    <!-- as command line arguments are ignored. -->
                    <arguments>-Prelease -DskipTests</arguments>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.4.3</version>
                <configuration>
                   <!-- Ignoring integration tests on test phase so they just run in integration-test phase.-->
                   <!-- This configuration is necessary when using AMPS together with a parent POM.-->
                    <excludes>
                        <exclude>it/**</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <id>copy-license</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}/META-INF</outputDirectory>
                            <overwrite>true</overwrite>
                            <resources>
                                <resource>
                                    <directory>${user.dir}</directory>
                                    <includes>
                                        <include>LICENSE.txt</include>
                                        <include>NOTICE.txt</include>
                                        <include>license.txt</include>
                                        <include>notice.txt</include>
                                    </includes>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <properties>
        <confluence.version>5.2</confluence.version>

        <atlassian.plugin.key>confluence.extra.jira</atlassian.plugin.key>
        <atlassian.product.version>${confluence.version}</atlassian.product.version>

        <atlassian.product.data.version>${confluence.version}</atlassian.product.data.version>
        <!-- Version 2.2 of the test library contains fixes that make it to work with SDK more seamlessly. Please also note the change of artifact ID (from func-test to func-test-package) -->
        <atlassian.product.test-lib.version>2.2.3</atlassian.product.test-lib.version>

        <jira.version>5.2</jira.version>
        <jira.data.version>4.0</jira.data.version>
        <jira.test-lib.version>${jira.version}</jira.test-lib.version>

        <jdkLevel>1.6</jdkLevel>
        <jvmArgs>-Xmx600m -XX:MaxPermSize=256m</jvmArgs>

        <http.port>1990</http.port>
        <jira.http.port>1${http.port}</jira.http.port>
        <xvfb.enable>false</xvfb.enable>
        <selenium.browser>firefox-3.6</selenium.browser>
        <jaxen.version>1.1.1</jaxen.version>
        <mockito.version>1.8.1</mockito.version>
        <atlassian-selenium-browsers-auto.version>2.1-m21</atlassian-selenium-browsers-auto.version>
        <atlassian.sal-api.version>2.3.1</atlassian.sal-api.version>
        <atlassian-cache-api.version>0.1</atlassian-cache-api.version>
        <maven-confluence-plugin.version>3.10.4</maven-confluence-plugin.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <distributionManagement>
        <repository>
            <id>atlassian-m2-repository</id>
            <name>Atlassian Public Repository</name>
            <url>https://maven.atlassian.com/public</url>
        </repository>
        <snapshotRepository>
            <id>atlassian-m2-snapshot-repository</id>
            <name>Atlassian Public Snapshot Repository</name>
            <url>https://maven.atlassian.com/public-snapshot</url>
        </snapshotRepository>    
    </distributionManagement>
</project>
